[shenker/cloning] Checkpoint of cloning notebooks, some WIP.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/211117 Insulation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/211117 Insulation.ipynb
@@ -318,7 +318,7 @@
     "    return pd.DataFrame(mat, index=xs.index, columns=ys.index)\n",
     "\n",
     "\n",
-    "def show_heatmap(df):\n",
+    "]def show_heatmap(df):\n",
     "    with pd.option_context(\n",
     "        \"display.max_rows\", None, \"display.max_columns\", None\n",
     "    ):  # more options can be specified also\n",
@@ -810,7 +810,7 @@
     "    selected_bidirectional_terms[\"sequence\"],\n",
     "    8,\n",
     "    enzymes=ENZYMES,\n",
-    "    blacklist=[\"BBa_B0010\", \"pheA-1\"],  # IDT seems unable to make pheA-1 as a gBlock\n",
+    "    blacklist=[\"BBa_B0010\", \"pheA-1\"], # IDT seems unable to make pheA-1 as a gBlock\n",
     ")"
    ]
   },
@@ -838,9 +838,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_heatmap(\n",
-    "    strong_all_sim[[\"ECK120029600\", \"ECK120033736\", \"BBa_B0062-R\", \"ECK120010869\"]]\n",
-    ")"
+    "show_heatmap(strong_all_sim[[\"ECK120029600\", \"ECK120033736\", \"BBa_B0062-R\", \"ECK120010869\"]])"
    ]
   },
   {
@@ -858,7 +856,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "natural_terminators[\"Sequence\"]  # [:100]"
+    "natural_terminators[\"Sequence\"]#[:100]"
    ]
   },
   {
@@ -878,14 +876,7 @@
     "    # BBa_B0010 is already a double-term\n",
     "    # IDT seems unable to make pheA-1 as a gBlock\n",
     "    # last four are from oLT75 (which was synthesized successfully)\n",
-    "    blacklist=[\n",
-    "        \"BBa_B0010\",\n",
-    "        \"pheA-1\",\n",
-    "        \"ECK120029600\",\n",
-    "        \"ECK120033736\",\n",
-    "        \"BBa_B0062-R\",\n",
-    "        \"ECK120010869\",\n",
-    "    ],\n",
+    "    blacklist=[\"BBa_B0010\", \"pheA-1\", \"ECK120029600\", \"ECK120033736\", \"BBa_B0062-R\", \"ECK120010869\"],\n",
     ")"
    ]
   },
@@ -1091,115 +1082,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Split oLT74"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from cytoolz import dissoc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "olt = reg[(\"oLT\", \"oligos\")]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "old_row = olt[\"oLT74\"]\n",
-    "seq = old_row[\"Sequence\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(seq)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "homology_length = 20\n",
-    "break_idx = 111\n",
-    "idxs = (slice(None, break_idx + homology_length), slice(break_idx, None))\n",
-    "for idx in idxs:\n",
-    "    print(seq[idx])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "date = datetime.now().strftime(\"%-m/%-d/%Y\")\n",
-    "\n",
-    "rows = []\n",
-    "\n",
-    "for i, idx in enumerate(idxs):\n",
-    "    row = {\n",
-    "        **dissoc(old_row, \"ID\"),\n",
-    "        \"Sequence\": seq[idx].upper(),\n",
-    "        \"Name\": \"{}_v2_split{}\".format(old_row[\"Name\"], i + 1),\n",
-    "        \"Description\": \"Split section {}-of-{} of oLT74 (20bp overlap).\\n{}\".format(\n",
-    "            i + 1, len(idxs), old_row[\"Description\"]\n",
-    "        ),\n",
-    "        \"Date\": date,\n",
-    "        \"Order date\": date,\n",
-    "    }\n",
-    "    rows.append(row)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for row in rows:\n",
-    "    olt[olt.next_id()] = row"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "olt.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rows"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Similarity"
    ]
   },
@@ -1349,138 +1231,6 @@
     "    ts[0], str(sequence.reverse_complement(ts[2])), -0.5, -0.5\n",
     ")\n",
     "print(pairwise2.format_alignment(*alignments[0]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# FROM: https://github.com/ViennaRNA/ViennaRNA/issues/64\n",
-    "\n",
-    "# read DNA parameters\n",
-    "RNA.read_parameter_file(\n",
-    "    f\"{os.environ['CONDA_PREFIX']}/share/ViennaRNA/dna_mathews2004.par\"\n",
-    ")\n",
-    "\n",
-    "\n",
-    "def primer_secondary_structure(seq):\n",
-    "    md = RNA.md()\n",
-    "    fc = RNA.fold_compound(seq, md)\n",
-    "    (_, mfe_monomer) = fc.mfe()\n",
-    "    fc_dimer = RNA.fold_compound(f\"{seq}&{seq}\", md)\n",
-    "    (_, mfe_homodimer) = fc_dimer.mfe()\n",
-    "    return mfe_monomer, mfe_homodimer"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Old"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Makeshift oligo orders"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def _format_seq(seq):\n",
-    "    return str(sequence.get_seq(seq)).lower()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "NO_GBLOCK = [\"DT3\", \"DT56\", \"DT60\"]\n",
-    "# NO_GBLOCK = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "overhangs = [\"aggt\", \"gctt\"]\n",
-    "random_bases = (\n",
-    "    \"GCTTCA\",\n",
-    "    \"TGCTAA\",\n",
-    ")  # to add between BsmBI recognition site and ends of oligos\n",
-    "flanks = (\"CGTCTCGGTCTCa\", \"tGAGACCgGAGACG\")  # storage vector BsmBI flanks\n",
-    "seqs_to_order = {}\n",
-    "for term_name, row in selected_terms.iterrows():\n",
-    "    seq = row[\"sequence\"]\n",
-    "    seq = workflow.add_flanks(\n",
-    "        workflow.add_overhangs(seq.lower(), overhangs),\n",
-    "        [flanks, random_bases],\n",
-    "    )\n",
-    "    seqs_to_order[term_name] = seq"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seqs_to_order"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prefix = \"oLT\"\n",
-    "id_num = 37\n",
-    "for term_name, seq in seqs_to_order.items():\n",
-    "    if term_name in NO_GBLOCK:\n",
-    "        continue\n",
-    "    # for sense in (False, True):\n",
-    "    for sense in (True,):\n",
-    "        if sense:\n",
-    "            oligo_seq = seq\n",
-    "        else:\n",
-    "            oligo_seq = sequence.reverse_complement(seq)\n",
-    "        id_ = f\"{prefix}{id_num}\"\n",
-    "        name = f\"Voigt_{term_name}\"\n",
-    "        print(f\"{id_}\\t{name}\\t{_format_seq(oligo_seq)}\")\n",
-    "        # print(f\"{name}\\t{_format_seq(oligo_seq)}\")\n",
-    "        id_num += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for term_name, seq in seqs_to_order.items():\n",
-    "    if term_name not in NO_GBLOCK:\n",
-    "        continue\n",
-    "    for sense in (True, False):\n",
-    "        if sense:\n",
-    "            oligo_seq = seq\n",
-    "        else:\n",
-    "            oligo_seq = sequence.reverse_complement(seq)\n",
-    "        id_ = f\"{prefix}{id_num}\"\n",
-    "        name = f\"Voigt_{term_name}_{'sense' if sense else 'antisense'}\"\n",
-    "        print(f\"{id_}\\t{name}\\t{_format_seq(oligo_seq)}\")\n",
-    "        id_num += 1"
    ]
   }
  ],
