--- a/paulssonlab/src/paulssonlab/shenker/cloning/220228 Geneious prototype.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220228 Geneious prototype.ipynb
@@ -119,15 +119,12 @@
    "source": [
     "import re\n",
     "\n",
-    "\n",
     "def strip_leading_lowercase(s):\n",
     "    return re.sub(r\"^[a-z]*\", \"\", s)\n",
-    "\n",
     "\n",
     "def ensure_folder(path, root):\n",
     "    folder = root\n",
     "    for key in path:\n",
-    "        print(key, path)\n",
     "        if key in folder:\n",
     "            folder = folder[key]\n",
     "        else:\n",
@@ -161,7 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# g.Base.metadata.drop_all(session.bind)"
+    "#g.Base.metadata.drop_all(session.bind)"
    ]
   },
   {
@@ -189,76 +186,67 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b87acf9-bc2a-4980-926e-763a8f4e5de3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# user = session.execute(select(g.GUser).where(g.GUser.username == \"remoteuser\")).one()[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "77d3e764-63a8-44ac-97f0-2fe72a623579",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for key in reg:\n",
-    "    type_ = key[1]\n",
-    "    print(key)\n",
-    "    if key[0].endswith(\"LIB\") and key[1] in (\"plasmids\",):\n",
-    "        client = reg[key]\n",
-    "        subfolder_key = (strip_leading_lowercase(key[0]), \"_\".join(key))\n",
-    "        collection_folder = ensure_folder(subfolder_key, geneious_registry_folder)\n",
-    "        for name in islice(client.keys(), 20, 30):\n",
-    "            entry = reg.get_with_prefix(name, key[0], type_)\n",
-    "            print(entry)\n",
-    "            if type_ == \"oligos\":\n",
-    "                document_type = \"primer\"\n",
-    "                name = entry[\"_id\"]\n",
-    "                description = entry[\"Name\"]\n",
-    "            elif type_ in (\"parts\", \"plasmids\"):\n",
-    "                document_type = \"genbank\"\n",
-    "                name = entry[\"_id\"]\n",
-    "                description = entry[\"Description\"]\n",
-    "            else:\n",
-    "                raise NotImplementedError\n",
-    "            seq = entry[\"_seq\"]\n",
-    "            urn = geneious.make_urn()\n",
-    "            # plugin_urn = geneious.make_urn()\n",
-    "            timestamp = geneious.geneious_timestamp()\n",
-    "            dt = datetime.fromtimestamp(timestamp / 1000)\n",
-    "            # print(name, description)\n",
-    "            document_xml, plugin_document_xml = geneious.dumps_geneious(\n",
-    "                seq,\n",
-    "                urn,\n",
-    "                document_type=document_type,\n",
-    "                name=name,\n",
-    "                description=description,\n",
-    "                timestamp=timestamp,\n",
-    "            )\n",
-    "            doc = g.AnnotatedDocument(\n",
-    "                parent_folder=collection_folder,\n",
-    "                urn=urn,\n",
-    "                modified=dt,\n",
-    "                document_xml=document_xml,\n",
-    "                plugin_document_xml=plugin_document_xml,\n",
-    "                reference_count=0,\n",
-    "            )\n",
-    "            session.add(doc)\n",
-    "        # TODO\n",
-    "        collection_folder.modified = text(\"current_timestamp\")\n",
-    "        # update_mtimes(collection_folder)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf634443-4c81-4a55-ac0a-bd65bcf83b1c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "collection_folder.modified = text(\"current_timestamp\")"
+    "def sync_geneious(reg, overwrite=False):\n",
+    "    for key in reg:\n",
+    "        type_ = key[1]\n",
+    "        if key[0].endswith(\"LIB\") and key[1] in (\"oligos\",):\n",
+    "            client = reg[key]\n",
+    "            subfolder_key = (strip_leading_lowercase(key[0]), \"_\".join(key))\n",
+    "            collection_folder = ensure_folder(subfolder_key, geneious_registry_folder)\n",
+    "            existing = {}\n",
+    "            for doc in collection_folder.annotated_documents:\n",
+    "                name = doc.name\n",
+    "                if name in existing:\n",
+    "                    raise ValueError(\"got duplicate name {} in folder {}\".format(name, \"/\".join(geneious_registry_folder+subfolder_key)))\n",
+    "                existing[name] = doc\n",
+    "            for name in islice(client.keys(), 0, 62):\n",
+    "                entry = reg.get_with_prefix(name, key[0], type_)\n",
+    "                if type_ == \"oligos\":\n",
+    "                    document_type = \"primer\"\n",
+    "                    name = entry[\"_id\"]\n",
+    "                    description = entry[\"Name\"]\n",
+    "                elif type_ in (\"parts\", \"plasmids\"):\n",
+    "                    document_type = \"genbank\"\n",
+    "                    name = entry[\"_id\"]\n",
+    "                    description = entry[\"Description\"]\n",
+    "                else:\n",
+    "                    raise NotImplementedError\n",
+    "                if name in existing:\n",
+    "                    if overwrite:\n",
+    "                        session.delete(existing[name])\n",
+    "                    else:\n",
+    "                        continue\n",
+    "                seq = entry[\"_seq\"]\n",
+    "                urn = geneious.make_urn()\n",
+    "                #plugin_urn = geneious.make_urn()\n",
+    "                timestamp = geneious.geneious_timestamp()\n",
+    "                dt = datetime.fromtimestamp(timestamp / 1000)\n",
+    "                #print(name, description)\n",
+    "                document_xml, plugin_document_xml = geneious.dumps_geneious(\n",
+    "                    seq,\n",
+    "                    urn,\n",
+    "                    document_type=document_type,\n",
+    "                    name=name,\n",
+    "                    description=description,\n",
+    "                    timestamp=timestamp,\n",
+    "                )\n",
+    "                doc = g.AnnotatedDocument(\n",
+    "                    parent_folder=collection_folder,\n",
+    "                    urn=urn,\n",
+    "                    modified=dt,\n",
+    "                    document_xml=document_xml,\n",
+    "                    plugin_document_xml=plugin_document_xml,\n",
+    "                    reference_count=0,\n",
+    "                )\n",
+    "                session.add(doc)\n",
+    "                existing[name] = doc\n",
+    "            # TODO\n",
+    "            collection_folder.modified = text(\"current_timestamp\")\n",
+    "            #update_mtimes(collection_folder)"
    ]
   },
   {
@@ -269,6 +257,16 @@
    "outputs": [],
    "source": [
     "session.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92900386-b256-420b-b669-ba72ad035510",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root_folder.modified = text(\"current_timestamp\")"
    ]
   },
   {
@@ -288,9 +286,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "session.execute(select(g.AnnotatedDocument)).all()[-1][0].modified = text(\n",
-    "    \"current_timestamp\"\n",
-    ")"
+    "session.execute(select(g.AnnotatedDocument)).all()[-1][0].modified = text(\"current_timestamp\")"
    ]
   },
   {
@@ -327,6 +323,66 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ae206ca7-fca4-433e-bfd1-436f1d3e36b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f2 = ensure_folder((\"registry\",\"test2\", \"b\"), root_folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd780e01-ba99-404f-8afc-9d6049e49947",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f2.modified = text(\"current_timestamp\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6577de34-d563-4ba7-b09a-8d1840f1e3a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root_folder.modified = text(\"current_timestamp\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "487bc409-2e4f-467e-be2c-a75a52ac2cda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f2.parent_folder.modified = text(\"current_timestamp\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7369625e-d78a-4716-b77b-a0cef76b323d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52daaaa7-9d44-44e7-8165-804ef186f96a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session.execute(select(g.Folder)).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2f91be5-bdd5-46db-8421-472cdb1dc4fe",
    "metadata": {},
    "outputs": [],
    "source": []
