--- a/paulssonlab/src/paulssonlab/shenker/cloning/220419 Barcode placeholders.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220419 Barcode placeholders.ipynb
@@ -59,16 +59,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11a0c5c8-2d1e-4709-ba91-a8fea6c6d09e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "random.seed(75)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "632e4db0-c5e8-4822-a281-0906096979b1",
    "metadata": {},
    "outputs": [],
@@ -341,9 +331,7 @@
     "    if antiparallel:\n",
     "        placeholder = sequence.reverse_complement(placeholder)\n",
     "    seq = (\n",
-    "        flib_fragments.find({\"Name\": unses[0]})[\"Sequence\"]\n",
-    "        + placeholder\n",
-    "        + flib_fragments.find({\"Name\": unses[1]})[\"Sequence\"]\n",
+    "        flib_fragments.find({\"Name\": unses[0]})[\"Sequence\"] + placeholder + flib_fragments.find({\"Name\": unses[1]})[\"Sequence\"]\n",
     "    )\n",
     "    name = f\"barcode_ph_{enzyme_name}_{'upstream' if upstream else 'downstream'}{'_antiparallel' if antiparallel else ''}\"\n",
     "    description = f\"3G part with {unses[0]}/{unses[1]} flanks and {enzyme_name} placeholder{' (reversed)' if antiparallel else ''} for golden gating in Daniel Eaton's barcode library.\"\n",
@@ -358,7 +346,7 @@
     "            \"Sequence\": workflow.normalize_seq_upper(seq),\n",
     "        },\n",
     "        apply=apply,\n",
-    "        overwrite=overwrite,\n",
+    "        overwrite=overwrite\n",
     "    )\n",
     "    oligo_id2 = olib_oligos.upsert(\n",
     "        {\n",
@@ -367,7 +355,7 @@
     "            \"Sequence\": workflow.normalize_seq_upper(sequence.reverse_complement(seq)),\n",
     "        },\n",
     "        apply=apply,\n",
-    "        overwrite=overwrite,\n",
+    "        overwrite=overwrite\n",
     "    )\n",
     "    usage = f\"{oligo_id1}={oligo_id2}\"\n",
     "    part_row = {\n",
@@ -538,7 +526,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
