[shenker/cloning] As used on 220824 to update Marionette CDS strains after a spreadsheet formatting issue made them insert at the wrong row.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/220824 Marionette parts.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220824 Marionette parts.ipynb
@@ -592,7 +592,7 @@
     "murray_3g_parts = {\n",
     "    row[\"Name\"]: reg.get(id_)[\"_seq\"]\n",
     "    for id_, row in flib_fragments.items()\n",
-    "    if \"Adam Meyer\" in row[\"Description\"]\n",
+    "    if \"Adam Meyer\" in row[\"Description\"] and \"Richard Murray lab\" in row[\"Author\"]\n",
     "}"
    ]
   },
@@ -670,7 +670,7 @@
     "\n",
     "apply = {\"Sequence\": workflow.normalize_seq}\n",
     "plasmid_apply = strain_apply = {\"Names\": None}\n",
-    "overwrite = True\n",
+    "overwrite = False\n",
     "\n",
     "primer_ids = {}\n",
     "primer_pairs = {}\n",
@@ -693,10 +693,6 @@
     "            for ajm, seq in aux_source_seqs.items()\n",
     "        ),\n",
     "    )\n",
-    ")\n",
-    "\n",
-    "digested_storage_vector = workflow.re_digest_part(\n",
-    "    plib_maps[storage_vector_id], storage_enzyme\n",
     ")\n",
     "\n",
     "for name, id_, ajm, type_, source_seq in source_seqs_all:\n",
@@ -757,7 +753,97 @@
     "        else:\n",
     "            raise ValueError(f\"unexpected type '{type_}'\")\n",
     "        part_seqs[variant_name] = part_seq\n",
+    "        if not anneal_promoter:\n",
+    "            forward_primer = next(\n",
+    "                primers.iter_primers(\n",
+    "                    seq_forward,\n",
+    "                    overhang=forward_overhang,\n",
+    "                    min_tm=tm_binding,\n",
+    "                    min_mfe=min_mfe,\n",
+    "                    anchor=\"5prime\",\n",
+    "                )\n",
+    "            )\n",
+    "            reverse_primer = next(\n",
+    "                primers.iter_primers(\n",
+    "                    seq_reverse,\n",
+    "                    overhang=reverse_overhang,\n",
+    "                    min_tm=tm_binding,\n",
+    "                    min_mfe=min_mfe,\n",
+    "                    anchor=\"5prime\",\n",
+    "                )\n",
+    "            )\n",
+    "            primer_pair = primers.PrimerPair(forward_primer, reverse_primer)\n",
+    "            primer_pairs[variant_name] = primer_pair\n",
+    "            try:\n",
+    "                pcr_seq = sequence.pcr(\n",
+    "                    plib_maps[id_],\n",
+    "                    forward_primer.seq,\n",
+    "                    reverse_primer.seq,\n",
+    "                    min_score=(len(forward_primer.binding), len(reverse_primer.binding)),\n",
+    "                )\n",
+    "            except Exception as e:\n",
+    "                if type_ == \"promoter\":\n",
+    "                    print(f\"{variant_name} ({id_}, {ajm}): got '{e}' when attempting PCR, falling back on annealed primers\")\n",
+    "                    anneal_promoter = True\n",
+    "                else:\n",
+    "                    raise\n",
+    "            # if PCR succeeds, keep going\n",
+    "            if not anneal_promoter:\n",
+    "                pcr_seqs[variant_name] = pcr_seq\n",
+    "                pcr_digest_seq = workflow.re_digest_part(pcr_seq, part_enzyme)\n",
+    "                if part_seq != pcr_digest_seq.seq_lower():\n",
+    "                    raise ValueError(\n",
+    "                        f\"PCR product does not match expected part for {variant_name}. PCR product:\\n{pcr_digest_seq.seq_lower()}\\n\\nexpecting:\\n{part_seq}\\n\\n\"\n",
+    "                    )\n",
+    "                if part_seq in murray_3g_seqs:\n",
+    "                    print(\n",
+    "                        f\"{variant_name} ({ajm}): identical match for 3G part {murray_3g_seqs[part_seq]}\"\n",
+    "                    )\n",
+    "                # oligos\n",
+    "                if type_ in (\"cds\", \"aux\"):\n",
+    "                    oligo_name = f\"marionette_cds_{variant_name}\"\n",
+    "                    if variant == \"bicistronic\":\n",
+    "                        description = f\"PCRs {id_} ({ajm}) to make golden gate CDS part for {name} followed by a bicistronic CDS placeholder.\"\n",
+    "                    else:\n",
+    "                        description = (\n",
+    "                            f\"PCRs {id_} ({ajm}) to make golden gate CDS part for {name}.\"\n",
+    "                        )\n",
+    "                elif type_ == \"promoter\":\n",
+    "                    description = f\"PCRs {id_} ({ajm}) to make golden gate promoter part for {name}.\"\n",
+    "                else:\n",
+    "                    raise ValueError(f\"unexpected type '{type_}'\")\n",
+    "                forward_primer_id = olib_oligos.upsert(\n",
+    "                    {\n",
+    "                        **oligo_base,\n",
+    "                        \"Name\": f\"{oligo_name}_f\",\n",
+    "                        \"Sequence\": workflow.normalize_seq_upper(forward_primer),\n",
+    "                        \"Description\": description,\n",
+    "                    },\n",
+    "                    apply=apply,\n",
+    "                    overwrite=overwrite,\n",
+    "                )\n",
+    "                reverse_primer_id = olib_oligos.upsert(\n",
+    "                    {\n",
+    "                        **oligo_base,\n",
+    "                        \"Name\": f\"{oligo_name}_r\",\n",
+    "                        \"Sequence\": workflow.normalize_seq_upper(reverse_primer),\n",
+    "                        \"Description\": description,\n",
+    "                    },\n",
+    "                    apply=apply,\n",
+    "                    overwrite=overwrite,\n",
+    "                )\n",
+    "                primer_ids[variant_name] = (forward_primer_id, reverse_primer_id)\n",
+    "                # plasmid_map\n",
+    "                plasmid_seq = sequence.assemble(\n",
+    "                    [workflow.re_digest_part(pcr_seq, storage_enzyme), digested_storage_vector]\n",
+    "                )\n",
+    "                plasmid_command = f\"@GG({id_}<{forward_primer_id},{reverse_primer_id}>/{storage_enzyme}, {storage_vector_id}/{storage_enzyme})\"\n",
     "        if anneal_promoter:\n",
+    "            annealed_digest_seq = workflow.re_digest_part(annealed_seq, part_enzyme)\n",
+    "            if part_seq != annealed_digest_seq.seq_lower():\n",
+    "                raise ValueError(\n",
+    "                    f\"Digestion product of annealed primers does not match expected part for {variant_name}. Digestion product:\\n{annealed_digest_seq.seq_lower()}\\n\\nexpecting:\\n{part_seq}\\n\\n\"\n",
+    "                )\n",
     "            description = f\"Primers to anneal to make golden gate promoter part part for {variant_name}. Sequences appear in {id_} ({ajm}).\"\n",
     "            sense_primer_id = olib_oligos.upsert(\n",
     "                {\n",
@@ -782,81 +868,11 @@
     "                overwrite=overwrite,\n",
     "            )\n",
     "            primer_ids[variant_name] = (sense_primer_id, antisense_primer_id)\n",
-    "        else:\n",
-    "            forward_primer = next(\n",
-    "                primers.iter_primers(\n",
-    "                    seq_forward,\n",
-    "                    overhang=forward_overhang,\n",
-    "                    min_tm=tm_binding,\n",
-    "                    min_mfe=min_mfe,\n",
-    "                    anchor=\"5prime\",\n",
-    "                )\n",
+    "            # plasmid_map\n",
+    "            plasmid_seq = sequence.assemble(\n",
+    "                [workflow.re_digest_part(annealed_seq, storage_enzyme), digested_storage_vector]\n",
     "            )\n",
-    "            reverse_primer = next(\n",
-    "                primers.iter_primers(\n",
-    "                    seq_reverse,\n",
-    "                    overhang=reverse_overhang,\n",
-    "                    min_tm=tm_binding,\n",
-    "                    min_mfe=min_mfe,\n",
-    "                    anchor=\"5prime\",\n",
-    "                )\n",
-    "            )\n",
-    "            primer_pair = primers.PrimerPair(forward_primer, reverse_primer)\n",
-    "            primer_pairs[variant_name] = primer_pair\n",
-    "            pcr_seq = sequence.pcr(\n",
-    "                plib_maps[id_],\n",
-    "                primer_pair.primer1.seq,\n",
-    "                primer_pair.primer2.seq,\n",
-    "                min_score=(len(forward_primer.binding), len(reverse_primer.binding)),\n",
-    "            )\n",
-    "            pcr_seqs[variant_name] = pcr_seq\n",
-    "            pcr_digest_seq = workflow.re_digest_part(pcr_seq, part_enzyme)\n",
-    "            if part_seq != pcr_digest_seq.seq_lower():\n",
-    "                raise ValueError(\n",
-    "                    f\"PCR product does not match expected part for {variant_name}. PCR product:\\n{pcr_digest_seq.seq_lower()}\\n\\nexpecting:\\n{part_seq}\\n\\n\"\n",
-    "                )\n",
-    "            if part_seq in murray_3g_seqs:\n",
-    "                print(\n",
-    "                    f\"{id_} ({ajm}): identical match for 3G part {murray_3g_seqs[part_seq]}\"\n",
-    "                )\n",
-    "            # oligos\n",
-    "            if type_ in (\"cds\", \"aux\"):\n",
-    "                oligo_name = f\"marionette_cds_{variant_name}\"\n",
-    "                if variant == \"bicistronic\":\n",
-    "                    description = f\"PCRs {id_} ({ajm}) to make golden gate CDS part for {name} followed by a bicistronic CDS placeholder.\"\n",
-    "                else:\n",
-    "                    description = (\n",
-    "                        f\"PCRs {id_} ({ajm}) to make golden gate CDS part for {name}.\"\n",
-    "                    )\n",
-    "            elif type_ == \"promoter\":\n",
-    "                description = f\"PCRs {id_} ({ajm}) to make golden gate promoter part for {name}.\"\n",
-    "            else:\n",
-    "                raise ValueError(f\"unexpected type '{type_}'\")\n",
-    "            forward_primer_id = olib_oligos.upsert(\n",
-    "                {\n",
-    "                    **oligo_base,\n",
-    "                    \"Name\": f\"{oligo_name}_f\",\n",
-    "                    \"Sequence\": workflow.normalize_seq_upper(forward_primer),\n",
-    "                    \"Description\": description,\n",
-    "                },\n",
-    "                apply=apply,\n",
-    "                overwrite=overwrite,\n",
-    "            )\n",
-    "            reverse_primer_id = olib_oligos.upsert(\n",
-    "                {\n",
-    "                    **oligo_base,\n",
-    "                    \"Name\": f\"{oligo_name}_r\",\n",
-    "                    \"Sequence\": workflow.normalize_seq_upper(reverse_primer),\n",
-    "                    \"Description\": description,\n",
-    "                },\n",
-    "                apply=apply,\n",
-    "                overwrite=overwrite,\n",
-    "            )\n",
-    "        primer_ids[variant_name] = (forward_primer_id, reverse_primer_id)\n",
-    "        # plasmid_map\n",
-    "        plasmid_seq = sequence.assemble(\n",
-    "            [workflow.re_digest_part(pcr_seq, storage_enzyme), digested_storage_vector]\n",
-    "        )\n",
+    "            plasmid_command = f\"@GG({sense_primer_id}={antisense_primer_id}/{storage_enzyme}, {storage_vector_id}/{storage_enzyme})\"\n",
     "        assert plasmid_seq.circular\n",
     "        storage_plasmid_seqs[variant_name] = plasmid_seq\n",
     "        # plasmid\n",
@@ -869,7 +885,7 @@
     "                plasmid_description = f\"Golden gate part for Adam Meyer's {name} CDS.\"\n",
     "        plasmid_row = {\n",
     "            **plasmid_base,\n",
-    "            \"Command\": f\"@GG({id_}<{forward_primer_id},{reverse_primer_id}>/{storage_enzyme}, {storage_vector_id}/{storage_enzyme})\",\n",
+    "            \"Command\": plasmid_command,\n",
     "            \"Names\": variant_name,\n",
     "            \"Description\": plasmid_description,\n",
     "            \"Size\": len(plasmid_seq),\n",
@@ -883,6 +899,8 @@
     "        lib_strains.upsert(strain_row, apply=strain_apply, overwrite=overwrite)\n",
     "        # part\n",
     "        usage = f\"{plasmid_id}/{part_enzyme}\"\n",
+    "        if anneal_promoter:\n",
+    "            usage += f\",{primer_ids[variant_name][0]}={primer_ids[variant_name][1]}/{part_enzyme}\"\n",
     "        if type_ == \"promoter\":\n",
     "            part_description = f\"Adam Meyer's {name} promoter. Sequence taken unmodified from color-coded region in the supplemental information for Meyer 2019.\"\n",
     "            if not anneal_promoter:\n",
@@ -911,7 +929,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cds_part_seqs[\"AM19_PhlFAM_bicistronic\"]"
+    "lib_strains.commit()"
    ]
   },
   {
@@ -920,7 +938,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cds_pcr_seqs[\"AM19_PhlFAM_bicistronic\"].seq_lower()"
+    "len(lib_strains.remote)"
    ]
   },
   {
@@ -929,7 +947,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "workflow.re_digest_part(cds_pcr_seqs[\"AM19_PhlFAM_bicistronic\"], storage_enzyme)"
+    "lib_strains.local"
    ]
   },
   {
@@ -938,172 +956,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "workflow.re_digest_part(cds_pcr_seqs[\"AM19_PhlFAM\"], storage_enzyme)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cds_paper_seqs[\"pAJM.847\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ajm_to_repressor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cds_storage_plasmid_seqs.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cds_storage_plasmid_seqs[\"AM19_PhlFAM\"].seq_lower()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cds_storage_plasmid_seqs[\"AM19_PhlFAM_bicistronic\"].seq_lower()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "olib_oligos.local"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Design promoter primers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "\n",
-    "promoter_base = {\"Author\": \"Jacob Quinn Shenker\", \"Date\": workflow.date()}\n",
-    "\n",
-    "promoter_oligo_base = {\n",
-    "    **promoter_base,\n",
-    "    \"Order date\": workflow.date(),\n",
-    "    \"Vendor\": \"Genewiz\",\n",
-    "    \"Type\": \"Primer\",\n",
-    "}\n",
-    "\n",
-    "part_base = {\n",
-    "    **promoter_base,\n",
-    "    \"Species/codon usage\": \"E. coli\",\n",
-    "    \"Reference\": reference,\n",
-    "}\n",
-    "\n",
-    "apply = {\"Sequence\": workflow.normalize_seq}\n",
-    "overwrite = True\n",
-    "\n",
-    "promoter_primer_ids = {}\n",
-    "promoter_part_seqs = {}\n",
-    "\n",
-    "for ajm, seq in promoter_source_seqs.items():\n",
-    "    name = ajm_to_promoter[ajm]\n",
-    "    id_ = ajm_to_id[ajm]\n",
-    "    seq = workflow.normalize_seq(seq)\n",
-    "    # TODO: squeeze\n",
-    "    primer_seq = workflow.normalize_seq(promoter_flanks[0] + seq + promoter_flanks[1])\n",
-    "    primer_seq = design.random_bases(num_random_bases, seed=primer_seq) + primer_seq\n",
-    "    primer_seq = primer_seq + design.random_bases(num_random_bases, seed=primer_seq)\n",
-    "    part_seq = workflow.normalize_seq(workflow.re_digest_part(primer_seq, part_enzyme))\n",
-    "    promoter_part_seqs[name] = part_seq\n",
-    "    if part_seq in murray_3g_seqs:\n",
-    "        print(f\"{id_} ({ajm}): identical match for 3G part {murray_3g_seqs[part_seq]}\")\n",
-    "    # oligos\n",
-    "    oligo_name = f\"marionette_prom_{name}\"\n",
-    "    description = f\"Primers to anneal to make golden gate promoter part part for {name}. Sequences appear in {id_} ({ajm}).\"\n",
-    "    sense_primer_id = olib_oligos.upsert(\n",
-    "        {\n",
-    "            **promoter_oligo_base,\n",
-    "            \"Name\": f\"{oligo_name}_sense\",\n",
-    "            \"Sequence\": workflow.normalize_seq_upper(primer_seq),\n",
-    "            \"Description\": description,\n",
-    "        },\n",
-    "        apply=apply,\n",
-    "        overwrite=overwrite,\n",
-    "    )\n",
-    "    antisense_primer_id = olib_oligos.upsert(\n",
-    "        {\n",
-    "            **promoter_oligo_base,\n",
-    "            \"Name\": f\"{oligo_name}_antisense\",\n",
-    "            \"Sequence\": workflow.normalize_seq_upper(\n",
-    "                sequence.reverse_complement(primer_seq)\n",
-    "            ),\n",
-    "            \"Description\": description,\n",
-    "        },\n",
-    "        apply=apply,\n",
-    "        overwrite=overwrite,\n",
-    "    )\n",
-    "    promoter_primer_ids[ajm] = (sense_primer_id, antisense_primer_id)\n",
-    "    # parts\n",
-    "    usage = f\"{sense_primer_id}={antisense_primer_id}/{part_enzyme}\"\n",
-    "    part_description = f\"Adam Meyer's {name} promoter. Sequence taken unmodified from color-coded region in the supplemental information for Meyer 2019. Sequences appear in {id_} ({ajm}).\"\n",
-    "    if ajm in extra_promoter_description:\n",
-    "        part_description += f\" {extra_promoter_description[ajm]}\"\n",
-    "    part_row = {\n",
-    "        **part_base,\n",
-    "        \"Name\": name,\n",
-    "        \"Description\": part_description,\n",
-    "        \"Sequence\": part_seq,\n",
-    "        \"Usage\": usage,\n",
-    "        \"Type\": promoter_part_type,\n",
-    "        \"Upstream overhang\": promoter_overhangs[0],\n",
-    "        \"Downstream overhang\": promoter_overhangs[1],\n",
-    "    }\n",
-    "    flib_fragments.upsert(part_row, apply=apply, overwrite=overwrite)\n",
-    "    # TODO: plasmid maps, plasmids, strains"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "olib_oligos.local"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "flib_fragments.local"
+    "lib_strains.commit()"
    ]
   },
   {
@@ -1121,7 +974,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "promoter_part_seqs"
+    "storage_plasmid_seqs.keys()"
    ]
   },
   {
@@ -1130,7 +983,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "{n: len(s) for n, s in promoter_part_seqs.items()}"
+    "storage_plasmid_seqs[\"AM19_PPhlF\"].seq_lower()"
    ]
   },
   {
@@ -1139,7 +992,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "olib_oligos.local"
+    "{ajm_to_promoter[k]: v for k, v in promoter_paper_seqs.items()}"
    ]
   },
   {
@@ -1178,10 +1031,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for name, oligo in olib_oligos.items():\n",
+    "for name, oligo in olib_oligos.local.items():\n",
     "    if oligo[\"Name\"].startswith(\"marionette\"):\n",
-    "        if len(oligo['Sequence']) > 60:\n",
-    "            print(f\"{name}\\t{oligo['Sequence']}\")"
+    "        #if len(oligo['Sequence']) > 60:\n",
+    "        print(f\"{name}\\t{oligo['Sequence']}\")"
    ]
   },
   {
